force-app/main/default/objects/Opportunity/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Datum und Uhrzeit, zu der die Opportunity erstellt wurde</inlineHelpText>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>