force-app/main/default/objects/Opportunity/fields/dateBillingDueDate__c.field-meta.xml
<CustomField>
    <fullName>dateBillingDueDate__c</fullName>
    <defaultValue>TODAY()+14</defaultValue>
    <label>Billing Due Date</label>
    <type>Date</type>
</CustomField>