force-app/main/default/objects/Opportunity/fields/dateGoLiveDate__c.field-meta.xml
<CustomField>
    <fullName>dateGoLiveDate__c</fullName>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>