force-app/main/default/objects/Opportunity/fields/dateOnboardingDate__c.field-meta.xml
<CustomField>
    <fullName>dateOnboardingDate__c</fullName>
    <label>Onboarding Date</label>
    <type>Date</type>
</CustomField>