force-app/main/default/objects/Opportunity/fields/dateTimestampClosedWonLost__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampClosedWonLost__c</fullName>
    <label>Timestamp Closed Won/Lost</label>
    <type>Date</type>
</CustomField>