force-app/main/default/objects/Opportunity/fields/dateTimestampClosedWonLostTime__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampClosedWonLostTime__c</fullName>
    <label>Timestamp Closed Won/Lost Time</label>
    <type>DateTime</type>
</CustomField>