force-app/main/default/objects/Opportunity/fields/dateTimestampContractreceived__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampContractreceived__c</fullName>
    <label>Timestamp Contract received</label>
    <type>Date</type>
</CustomField>