force-app/main/default/objects/Opportunity/fields/dateTimestampInDiscussion__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampInDiscussion__c</fullName>
    <label>Timestamp In Discussion</label>
    <type>Date</type>
</CustomField>