force-app/main/default/objects/Opportunity/fields/dateTimestampInDiscussionTime__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampInDiscussionTime__c</fullName>
    <label>Timestamp In Discussion Time</label>
    <type>DateTime</type>
</CustomField>