force-app/main/default/objects/Opportunity/fields/dateTimestampInviteSentTime__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampInviteSentTime__c</fullName>
    <label>Timestamp Invite Sent Time</label>
    <type>DateTime</type>
</CustomField>