force-app/main/default/objects/Opportunity/fields/dateTimestampLead_nterested__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampLead_nterested__c</fullName>
    <label>Timestamp Lead Interested</label>
    <type>Date</type>
</CustomField>