force-app/main/default/objects/Opportunity/fields/dateTimestampOfferTime__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampOfferTime__c</fullName>
    <description>legacy</description>
    <label>Timestamp Offer Time</label>
    <type>DateTime</type>
</CustomField>