force-app/main/default/objects/Opportunity/fields/dateTimestampPilotDefinitionTime__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampPilotDefinitionTime__c</fullName>
    <label>Timestamp Pilot Definition Time</label>
    <type>DateTime</type>
</CustomField>