force-app/main/default/objects/Opportunity/fields/dateTimestampPreSatisfactionCall__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampPreSatisfactionCall__c</fullName>
    <label>Legacy -Timestamp Pre- Satisfaction Call</label>
    <type>Date</type>
</CustomField>