force-app/main/default/objects/Opportunity/fields/dateTimestampPreSatisfactionCallTime__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampPreSatisfactionCallTime__c</fullName>
    <label>Legacy - TS Pre- Satisfaction Call Time</label>
    <type>DateTime</type>
</CustomField>