force-app/main/default/objects/Opportunity/fields/dateTimestampSatisfactionCallTime__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampSatisfactionCallTime__c</fullName>
    <label>Timestamp Satisfaction Call Time</label>
    <type>DateTime</type>
</CustomField>