force-app/main/default/objects/Opportunity/fields/dateTimestampVerbalYesTime__c.field-meta.xml
<CustomField>
    <fullName>dateTimestampVerbalYesTime__c</fullName>
    <label>Legacy - Timestamp Verbal Yes Time</label>
    <type>DateTime</type>
</CustomField>