force-app/main/default/objects/Opportunity/fields/Days_Closed_Won_to_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Days_Closed_Won_to_Go_Live__c</fullName>
    <description>Duration in Days between Timestamp Closed Won and Initial Go Live Date (1st Job Live). Work with Hunting Opps Only.</description>
    <formula>IF(dateTimestampClosedWonLost__c &lt; Account.dateInitialGoLive__c,
   Account.dateInitialGoLive__c  - dateTimestampClosedWonLost__c,
   NULL)</formula>
    <inlineHelpText>Duration in Days between Timestamp Closed Won and Initial Go Live Date (1st Job Live). Work with Hunting Opps Only.</inlineHelpText>
    <label>Legacy - Days Closed Won to Initial GoLv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>