force-app/main/default/objects/Opportunity/fields/Days_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Days_Quarter__c</fullName>
    <description>Used in runrate calculation for forecasting.</description>
    <formula>CASE(Month(TODAY()),
1, fmlDays__c,
2, fmlDays__c + 31,
3, fmlDays__c + 60,
4, fmlDays__c,
5, fmlDays__c +30,
6, fmlDays__c + 61,
7, fmlDays__c,
8, fmlDays__c + 31,
9, fmlDays__c + 61,
10, fmlDays__c,
11, fmlDays__c + 31,
12, fmlDays__c + 61,
0)</formula>
    <label>Days Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>