force-app/main/default/objects/Opportunity/fields/Demo_Count_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Demo_Count_Forecast__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Automatically calculates whether an opportunity is marked as a Demo Held.
Displays 1 if tdemo was held, and 0 otherwise.
Used in forecasting to count the number of demos owned by a user or team.</description>
    <inlineHelpText>Zeigt an, ob eine Demo gehalten wurde.
Der Wert beträgt 1, Demo gehalten wurde, und 0, wenn nicht.
Dieses Feld wird für Forecasts verwendet, um die Anzahl der Demos zu tracken.</inlineHelpText>
    <label>Demo Count Forecast</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>