force-app/main/default/objects/Opportunity/fields/Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date__c</fullName>
    <inlineHelpText>Datum, an dem die Demo mit dem Kund*in stattfindet.</inlineHelpText>
    <label>Demo Date</label>
    <type>Date</type>
</CustomField>