force-app/main/default/objects/Opportunity/fields/Demo_Date_to_Closed_Won_Lost__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_to_Closed_Won_Lost__c</fullName>
    <formula>dateTimestampClosedWonLost__c - Demo_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Demo Date to Closed Won/Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>