force-app/main/default/objects/Opportunity/fields/Demo_Date_to_Contract_received__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_to_Contract_received__c</fullName>
    <formula>dateTimestampContractreceived__c -   Demo_Date__c</formula>
    <label>Demo Date to Contract received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>