force-app/main/default/objects/Opportunity/fields/Demo_Date_to_Offer__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_to_Offer__c</fullName>
    <formula>TimestampOffer__c -   Demo_Date__c</formula>
    <label>Demo Date to Offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>