force-app/main/default/objects/Opportunity/fields/Demo_Date_to_Today__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_to_Today__c</fullName>
    <description>Demo Date to Today</description>
    <formula>Today() -  Demo_Date__c</formula>
    <inlineHelpText>Demo Date to Today</inlineHelpText>
    <label>Legacy - Demo Date to Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>