force-app/main/default/objects/Opportunity/fields/Demo_Influence__c.field-meta.xml
<CustomField>
    <fullName>Demo_Influence__c</fullName>
    <inlineHelpText>Markiert Demos, die nicht aus der regulären Demo Verteilung stammen, sondern von anderen Faktoren beeinflusst wurden.
Decentralized Efforts = Arbeit an einem gemeinsamen Projekt, das sich darauf konzentriert, eine Unternehmensstruktur aufzubrechen.
Team Effort = Arbeit an einem gemeinsamen Projekt, das sich auf eine Branche und deren Unternehmen konzentriert. Zusätzlich gemeinsamer Fokus auf Ziel Accounts aus der Pipeline eines Account Executives oder aus dem CRM.</inlineHelpText>
    <label>Demo Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decentralized Efforts</fullName>
            </value>
            <value>
                <fullName>Team Effort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>