force-app/main/default/objects/Opportunity/fields/Demo_Person__c.field-meta.xml
<CustomField>
    <fullName>Demo_Person__c</fullName>
    <label>Legacy - Demo Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>