force-app/main/default/objects/Opportunity/fields/Demo_Score__c.field-meta.xml
<CustomField>
    <fullName>Demo_Score__c</fullName>
    <description>RO - 1597</description>
    <label>Legacy - Demo Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>