force-app/main/default/objects/Opportunity/fields/Demo_set_by_new__c.field-meta.xml
<CustomField>
    <fullName>Demo_set_by_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Demo set by User Lookup</description>
    <inlineHelpText>Name der Person, die die Demo gelegt/vereinbart hat.</inlineHelpText>
    <label>Demo set by</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Head of, Small, Large, Enterprise, VP Large, Pre Sales</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>