force-app/main/default/objects/Opportunity/fields/Demo_set_by_Profile__c.field-meta.xml
<CustomField>
    <fullName>Demo_set_by_Profile__c</fullName>
    <description>For Reporting</description>
    <formula>Demo_set_by_new__r.Profile.Name</formula>
    <inlineHelpText>Helps to understand who of the team scheduled the demo call to track it in later stages of the customer lifecycle</inlineHelpText>
    <label>Demo set by Profile</label>
    <type>Text</type>
</CustomField>