force-app/main/default/objects/Opportunity/fields/Demo_to_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_to_Close_Date__c</fullName>
    <formula>dateTimestampClosedWonLost__c - Timestamp_Demo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Demo to Closed Won/Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>