force-app/main/default/objects/Opportunity/fields/Demo_to_Today__c.field-meta.xml
<CustomField>
    <fullName>Demo_to_Today__c</fullName>
    <description>For Reporting</description>
    <formula>Today()- Timestamp_Demo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Demo to Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>