force-app/main/default/objects/Opportunity/fields/domain_userid__c.field-meta.xml
<CustomField>
    <fullName>domain_userid__c</fullName>
    <description>Used for tracking - Snowplow via Hubspot</description>
    <label>domain_userid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>