force-app/main/default/objects/Opportunity/fields/Dunnig_Email__c.field-meta.xml
<CustomField>
    <fullName>Dunnig_Email__c</fullName>
    <description>Used by Finance. RO-480, RO-612</description>
    <formula>IF( ISBLANK(Account.Dunning_Email__c) = TRUE, 
Account.Billing_Email__c,
Account.Dunning_Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Emailadresse an die Mahnungen verschickt werden</inlineHelpText>
    <label>Dunnig Email</label>
    <type>Text</type>
</CustomField>