force-app/main/default/objects/Opportunity/fields/Email_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_ID__c</fullName>
    <formula>Email_Campaign_Source__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Campaign ID</label>
    <type>Text</type>
</CustomField>