force-app/main/default/objects/Opportunity/fields/Email_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy - Email Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Email Campaign Source)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>