force-app/main/default/objects/Opportunity/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>RO - 1653</description>
    <inlineHelpText>Zeigt die Engagement Punktzahl, die der Kontakt der mit der Opportunity verknüpft hat (Contact Role) erreicht hat. Um so höher der Score ist, desto “heißer” ist der Kontakt und somit auch die Opportunity und sollte angegangen werden. 
Mehr Informationen findest du hier: https://heyjobs.atlassian.net/wiki/spaces/BM/pages/3145138239/Engagement+Score</inlineHelpText>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>