force-app/main/default/objects/Opportunity/fields/Estimated_Wallet_size_opp__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Wallet_size_opp__c</fullName>
    <description>RO - 1919.</description>
    <formula>Account.Estimated_Wallet_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Wallet size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>