force-app/main/default/objects/Opportunity/fields/Event_Agency_check__c.field-meta.xml
<CustomField>
    <fullName>Event_Agency_check__c</fullName>
    <description>Only true when the contact confirms that they are part of an agency</description>
    <label>Event Agency check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>