force-app/main/default/objects/Opportunity/fields/Events_impacting_prioritization__c.field-meta.xml
<CustomField>
    <fullName>Events_impacting_prioritization__c</fullName>
    <description>RO-2093</description>
    <inlineHelpText>Gibt es bevorstehende Ereignisse, die sich auf die Priorisierung von Rekrutierungslösungen auswirken?</inlineHelpText>
    <label>Events impacting prioritization</label>
    <type>TextArea</type>
</CustomField>