force-app/main/default/objects/Opportunity/fields/First_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>First_Opportunity_Stage__c</fullName>
    <label>First Opportunity Stage</label>
    <type>TextArea</type>
</CustomField>