force-app/main/default/objects/Opportunity/fields/fmlAccountHappiness__c.field-meta.xml
<CustomField>
    <fullName>fmlAccountHappiness__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(legacy) Account Happiness</label>
    <type>Text</type>
</CustomField>