force-app/main/default/objects/Opportunity/fields/fmlAccountName__c.field-meta.xml
<CustomField>
    <fullName>fmlAccountName__c</fullName>
    <description>used in outbound messages for zapier</description>
    <formula>Account.Name</formula>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>