force-app/main/default/objects/Opportunity/fields/fmlCareerPage__c.field-meta.xml
<CustomField>
    <fullName>fmlCareerPage__c</fullName>
    <formula>HYPERLINK( Account.urlCareerPage__c, &quot;Career Page&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Career Page (from Account)</label>
    <type>Text</type>
</CustomField>