force-app/main/default/objects/Opportunity/fields/fmlDays__c.field-meta.xml
<CustomField>
    <fullName>fmlDays__c</fullName>
    <formula>TODAY() - DATE(  YEAR(TODAY()),  MONTH(TODAY()),  1  ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>