force-app/main/default/objects/Opportunity/fields/fmlDaystoClose__c.field-meta.xml
<CustomField>
    <fullName>fmlDaystoClose__c</fullName>
    <formula>CloseDate   - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>