force-app/main/default/objects/Opportunity/fields/fmlLastDayMonth__c.field-meta.xml
<CustomField>
    <fullName>fmlLastDayMonth__c</fullName>
    <formula>IF( MONTH( TODAY() ) = 12, 
DATE( YEAR( TODAY() ), 12, 31 ), 
DATE( YEAR( TODAY() ), MONTH( TODAY() ) + 1, 1) - 1) -

DATE(
YEAR(TODAY()),
MONTH(TODAY()),
1
) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastDayMonth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>