force-app/main/default/objects/Opportunity/fields/fmlOnboardingEmail__c.field-meta.xml
<CustomField>
    <fullName>fmlOnboardingEmail__c</fullName>
    <formula>Onboarding__r.Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Email</label>
    <type>Text</type>
</CustomField>