force-app/main/default/objects/Opportunity/fields/fmlOnoardingSalutation__c.field-meta.xml
<CustomField>
    <fullName>fmlOnoardingSalutation__c</fullName>
    <formula>TEXT( Onboarding__r.Contact__r.Salutation )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onoarding Salutation</label>
    <type>Text</type>
</CustomField>