force-app/main/default/objects/Opportunity/fields/fmlOwnerName__c.field-meta.xml
<CustomField>
    <fullName>fmlOwnerName__c</fullName>
    <description>Used in Outbound Message to send data to Slack via Zapier</description>
    <formula>Owner.FirstName &amp; &quot; &quot;&amp; Owner.LastName</formula>
    <label>OwnerName</label>
    <type>Text</type>
</CustomField>