force-app/main/default/objects/Opportunity/fields/fmlWebsite__c.field-meta.xml
<CustomField>
    <fullName>fmlWebsite__c</fullName>
    <formula>HYPERLINK(&quot;www.&quot; + Account.txtEmailDomain__c,&quot;www.&quot; + Account.txtEmailDomain__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website</label>
    <type>Text</type>
</CustomField>