force-app/main/default/objects/Opportunity/fields/Follow_Up_Reason__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Reason__c</fullName>
    <description>Follow up later reason for Second Purchase and Existing Business</description>
    <inlineHelpText>Follow up later reason for Second Purchase and Existing Business</inlineHelpText>
    <label>Legacy - Follow Up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einstellungsstopp / Keine Vakanzen</fullName>
                <label>Hiring freeze / no open positions</label>
            </value>
            <value>
                <fullName>Interne Strukturen</fullName>
                <label>Internal blockers (new decision maker/contact)</label>
            </value>
            <value>
                <fullName>Kein Budget / Budgetverhandlung in Zukunft</fullName>
                <label>No budget atm / budget negotiations in future</label>
            </value>
            <value>
                <fullName>Keine passenden Vakanzen</fullName>
                <label>No focus jobs</label>
            </value>
            <value>
                <fullName>Keine Priorität beim Kunden</fullName>
                <label>No priority on client side</label>
            </value>
            <value>
                <fullName>Nutzt Konkurrenz</fullName>
                <label>Uses competitor</label>
            </value>
            <value>
                <fullName>Unzufrieden mit HeyJobs</fullName>
                <label>Not satisfied with HeyJobs</label>
            </value>
            <value>
                <fullName>Zu teuer</fullName>
                <label>Too expensive</label>
            </value>
            <value>
                <fullName>ATS discussion</fullName>
            </value>
            <value>
                <fullName>No potential due to size</fullName>
            </value>
            <value>
                <fullName>Rescheduling Demo</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Corona</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>