force-app/main/default/objects/Opportunity/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <description>Estimated amount to be used for the forecast</description>
    <label>Legacy Forecast Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>