force-app/main/default/objects/Opportunity/fields/forecast_category__c.field-meta.xml
<CustomField>
    <fullName>forecast_category__c</fullName>
    <description>RO-2323</description>
    <inlineHelpText>Used to update the forecast category</inlineHelpText>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>BestCase</fullName>
                <label>Best Case</label>
            </value>
            <value>
                <fullName>Forecast</fullName>
                <label>Worst Case - Certain</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>MostLikely</fullName>
                <label>Most likely</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>