force-app/main/default/objects/Opportunity/fields/Framework_Opportunity_Group__c.field-meta.xml
<CustomField>
    <fullName>Framework_Opportunity_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO - 1631</description>
    <label>Framework Opportunity Group</label>
    <referenceTo>Framework_Opportunity_Group__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>