force-app/main/default/objects/Opportunity/fields/Funnel_Type__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Type__c</fullName>
    <description>RO-2711</description>
    <label>Funnel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales generated</fullName>
            </value>
            <value>
                <fullName>Marketing generated</fullName>
            </value>
            <value>
                <fullName>Marketing influenced</fullName>
            </value>
            <value>
                <fullName>Auto-Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>