force-app/main/default/objects/Opportunity/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Google-Ads Capture</description>
    <label>GCLID</label>
    <type>TextArea</type>
</CustomField>