force-app/main/default/objects/Opportunity/fields/GTM_Motion_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Opportunity__c</fullName>
    <description>RO - 1958</description>
    <inlineHelpText>Das GTM Motion zeigt an, zu welcher Motion (Segment) ein Opportunity gehört. Das Feld wird mit der GTM Motion auf Account aligned, so lange die Opportunity offen ist. Nach dem schließen der Opportunity kann der Wert nicht mehr verändert werden.</inlineHelpText>
    <label>GTM Motion Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Motion_values</valueSetName>
    </valueSet>
</CustomField>