force-app/main/default/objects/Opportunity/fields/HeyJobs_Category_from_Account__c.field-meta.xml
<CustomField>
    <fullName>HeyJobs_Category_from_Account__c</fullName>
    <description>RO-2155</description>
    <inlineHelpText>Changes automatically update the Account (for open opps)</inlineHelpText>
    <label>HeyJobs - Category (from Account)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HeyJobs_Category</valueSetName>
    </valueSet>
</CustomField>