force-app/main/default/objects/Opportunity/fields/HeyPaket_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Cancellation_Reason__c</fullName>
    <description>RO-1432</description>
    <inlineHelpText>Die Klassifikation des HeyPakets zeigt an, ob es ein neues HeyPaket, ein Upsell oder manuelles Renewal oder ein Auto-Renewal ist. Die Klassifikation wird automatisch beim Akzeptieren der Quote eingetragen</inlineHelpText>
    <label>HeyPaket Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>