force-app/main/default/objects/Opportunity/fields/HeyPaket_Classification__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Classification__c</fullName>
    <description>RO-1824</description>
    <label>HeyPaket Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Renewal/Upsell</fullName>
            </value>
            <value>
                <fullName>Auto-Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>